Adjusted CSS for lists, fixed? foolproof design for toolbar buttons, moved all called instances of .disabled and associated into updateToolbarButtons and called that method instead. Left old code behind as comments in case I missed a gap. FINAL build unless I find an error

--- a/public_html/css/top5-style.css
+++ b/public_html/css/top5-style.css
@@ -226,4 +226,5 @@ input {
   outline: none;
   background-color: transparent;
   font-family: "Lexend Exa";
+  width: 340px;
 }
